JPackageCommand: make DEFAULT_RUNTIME_IMAGE private